---version 2.0.4 yet to be released---
10-nov-2008 - punkrockguy - improved the sdl sound code; drasticaly improves quality of sound.
09-nov-2008 - adelikat - minor memory watch menu clean up, removed Ctrl+W hotkey for close (and placed Alt+F4 on the menu name)
08-nov-2008 - zeromus - big endian wasnt compiling. fix issues.
02-nov-2008 - shinydoofy - added --fcmconvert for SDL
02-nov-2008 - zeromus - emulua - add rom.readbyte and rom.readbytesigned

---version 2.0.3 released---

02-nov-2008 - zeromus - fix fcm conversion, recording, and playback of reset and power commands
25-oct-2008 - shinydoofy - added support for AVI creation for SDL, see documentation/Videolog.txt for more
19-oct-2008 - shinydoofy - toggle lag frame counter for SDL, default hotkey F8
19-oct-2008 - shinydoofy - toggle skipping of lag frames for SDL, default hotkey F6
19-oct-2008 - shinydoofy - [ 2179829 ] user ability to toggle "bind savestates to movie" added for SDL, default hotkey F2
19-oct-2008 - adelikat - win32 - added a toggle for binding savestates to movies
18-oct-2008 - adelikat - win32 - added -cfg (config file) command line argument
08-oct-2008 - zeromus - SF [ 2073113 ] Child windows inside debugging window get invalid sizes
08-oct-2008 - zeromus - SF [ 2153843 ] Lua ignores second joypad.set()
24-sep-2008 - punkrockguy318 - made the input config window more usable
24-sep-2008 - punkrockguy318 - --inputcfg can now be used without a filename
24-sep-2008 - punkrockguy318 - [ 2085437 ] should fix issues with missing author field crashing fceux
24-sep-2008 - punkrockguy318 - [ 2047057 ] added uninstall script for gfceux
24-sep-2008 - punkrockguy318 - [ 2062823 ] fixed ppc build errors and added LSB_FIRST option to build scripts
24-sep-2008 - punkrockguy318 - [ 2057006 ] --newppu option added to sdl, disabled by default
24-sep-2008 - punkrockguy318 - [ 2057008 ] lua is now optional, thanks shinydoofy for a patch.  also fixed some build issues.